// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.js - flow-verify 1`] = `
var o = Object.freeze({ foo: 0 });
(o.foo: string);
module.exports = o;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
var o = Object.freeze({ foo: 0 });
(o.foo: string);
module.exports = o;

`;

exports[`test2.js - flow-verify 1`] = `
var o = require('./test');
(o.foo: string);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
var o = require("./test");
(o.foo: string);

`;
